# thesis

./: .gitignore  AHII_UML.drawio  HBIM_UML_withGS.drawio  README.md  Untitled Diagram.drawio  updated3dgs.drawio  updated3dgs.drawio.xml
aula/src/: IFC_to_ply_json.py  add_normals_for_viewing.py  align_gs_pc.py  aula_clip_add_id.py  bim_info_extract.py  change_rgb_viewing.py  check_ply.py  clean_clusterid_cc.py  clean_downsample.py  clean_ply_header.py  clean_point_cloud.py  clip_gs_ply.py  clip_laz.py  downsample_ply.py  filter_building_from_laz.py  georeference_local.py  georeference_refine.py  integrate_statue.py  laz_to_pcd.py  laz_to_ply.py  least_square_georeference.py  merge_laz.py  patchid_propogate_gs_spc.py  ply_acsii_to_binary.py  ply_clip_to_patchid.py  ply_convert_for_pcl.py  read_ply.py  segment_gs_on_id.py  speckle_stream.py  test_pdal.py  test_speckle.py  write_clusterid_to_original.py  write_leftover_RANSAC_cc.py
pcl/: CMakeLists.txt  RANSAC.cpp  convert_ply_to_pcd.cpp  downsampling.cpp  main.cpp  pcd_to_ply.cpp  region_growth_normals.cpp  region_rgb_segmentation.cpp
src/: crop.py  crop_laz.py  read_ply.py  read_splat.py
